--- a/temper.ipynb
+++ b/temper.ipynb
@@ -9,16 +9,8 @@
    "cell_type": "code",
    "metadata": {},
    "source": [
-    "%pip install pgmpy"
-   ],
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "cell_type": "code",
-   "metadata": {},
-   "source": [
     "import pandas as pd\n",
+    "import networkx as nx\n",
     "import matplotlib.pyplot as plt"
    ],
    "outputs": [],
@@ -182,22 +174,12 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": [
-    "import networkx as nx\n",
-    "import matplotlib.pyplot as plt"
-   ],
    "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
+   "execution_count": null,
    "source": [
-    "nx.draw(est)\n",
+    "nx.draw(model, with_labels=True)\n",
     "plt.draw()"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   }
  ],
  "metadata": {
